[package]
name = "window_of_opportunity"
version = "0.1.0"
edition = "2021"
authors = ["Dave Arkell dave@arkells.net"]
description = "window_of_opportunity is a simple library for managing UIs"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dependencies.windows]
version = "0.56.0"
features = [
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Controls",
    "Win32_UI_Input_KeyboardAndMouse",
]
