[package]
name = "window_of_opportunity"
version = "0.1.0"
edition = "2021"
authors = ["Dave Arkell dave@arkells.net"]
description = "window_of_opportunity is a simple library for managing UIs"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[target.'cfg(windows)'.dependencies]

[dependencies]
dioxus = "0.6.3"
dioxus-core = { version = "0.6.3", features = ["serialize"] }
dioxus-native-core = "0.4.3"
# winrt = { path = "./winrt-gen", package = "winrt-gen" }

[dependencies.windows]
version = "0.58.0"
features = [
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Controls",
    "Win32_UI_Input_KeyboardAndMouse",
    "Foundation_Collections",
]
